--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crypto"
   ],
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
@@ -23,9 +24,9 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.4",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.4"
   }
 }
