--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "outDir": "./dist",
     "strict": true,
-    "target": "ES2015"
+    "target": "ES2018",
   },
   "include": ["src/**/*"]
 }
