--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "prepare": "tsc"
   },
   "peerDependencies": {
-    "openpgp": ">=5"
+    "openpgp": "^5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.4",
+    "@typescript-eslint/eslint-plugin": ">=5.58.0",
+    "@typescript-eslint/parser": ">=5.58.0",
+    "eslint": ">=8.38.0",
+    "eslint-config-prettier": ">=8.8.0",
+    "prettier": ">=2.8.7",
     "typescript": "^5.0.4"
   }
 }
