--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "openpgp": "^5"
   },
   "devDependencies": {
+    "@openpgp/web-stream-tools": "^0.0.13",
     "@typescript-eslint/eslint-plugin": ">=5.58.0",
     "@typescript-eslint/parser": ">=5.58.0",
     "eslint": ">=8.38.0",
