--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "jsxSingleQuote": false,
   "printWidth": 110,
   "singleQuote": true,
+  "tabWidth": 2,
   "trailingComma": "es5",
   "useTabs": false
 }
