chore: update `.gitattributes`

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 # Normalise line endings
 * text=auto
 
-/dist linguist-generated
+# Exclude from language stats
+/dist        linguist-generated
+.eslintrc.*  linguist-detectable=false
