--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   "typescript.tsdk": "node_modules/typescript/lib",
 
   "markdownlint.config": {
+    "MD024": false,
     "MD033": false,
     "MD041": false,
     "MD051": false
