--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   ],
   "type": "module",
   "workspaces": [
-    "packages/*"
+    "packages/core",
+    "packages/adapters/*"
   ],
   "scripts": {
     "build": "npm run build --workspaces --if-present",
     "dev": "concurrently -k npm:dev:*",
     "dev:core": "npm run dev --workspace ./packages/core",
-    "dev:openpgp": "npm run dev --workspace ./packages/openpgp",
+    "dev:openpgp": "npm run dev --workspace ./packages/adapters/openpgp",
     "line-count": "find -type f -name *.ts -exec cat {} \\; | wc -l",
     "lint": "prettier --check . && eslint .",
     "prettier": "prettier --write ."
   },
   "devDependencies": {
+    "@enclavetech/kms-core": "file:packages/core",
     "@typescript-eslint/eslint-plugin": ">=5.59.5",
     "@typescript-eslint/parser": ">=5.59.5",
     "concurrently": "^8.0.1",
