--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "verbatimModuleSyntax": true,
     "module": "ES2020",
     "moduleResolution": "node",
     "outDir": "./dist",
     "strict": true,
     "strictPropertyInitialization": true,
-    "target": "ES2018"
+    "target": "ES2020",
+    "verbatimModuleSyntax": true
   },
   "include": ["packages/**/src"]
 }
