--- a/packages/adapters/jose/package.json
+++ b/packages/adapters/jose/package.json
@@ -15,13 +15,14 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "prepare": "tsc"
   },
   "peerDependencies": {
     "@enclavetech/kms-core": "*",
     "jose": "^4.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.1.3"
+    "typescript": "~5.0.0"
   }
 }
