--- a/packages/adapters/openpgp/package.json
+++ b/packages/adapters/openpgp/package.json
@@ -17,7 +17,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "prepare": "tsc"
   },
   "peerDependencies": {
     "@enclavetech/kms-core": "*",
@@ -25,6 +26,6 @@
   },
   "devDependencies": {
     "@openpgp/web-stream-tools": "^0.0.13",
-    "typescript": "^5.1.3"
+    "typescript": "~5.0.0"
   }
 }
