--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,9 +15,10 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "prepare": "tsc"
   },
   "devDependencies": {
-    "typescript": "^5.1.3"
+    "typescript": "~5.0.0"
   }
 }
