--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
   },
   "devDependencies": {
     "@enclavetech/kms-core": "file:packages/core",
-    "@typescript-eslint/eslint-plugin": ">=5.59.9",
-    "@typescript-eslint/parser": ">=5.59.9",
-    "concurrently": "^8.1.0",
-    "eslint": ">=8.42.0",
+    "@typescript-eslint/eslint-plugin": ">=5.60.0",
+    "@typescript-eslint/parser": ">=5.60.0",
+    "concurrently": "*",
+    "eslint": ">=8.43.0",
     "eslint-config-prettier": ">=8.8.0",
     "prettier": ">=2.8.8",
     "typescript": "~5.0.0"
